# HiveMindDB

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROPOSAL.md  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  channels.rs  config.rs  embeddings.rs  extraction.rs  main.rs  memory_engine.rs  persistence.rs  types.rs  websocket.rs
crates/mcp-server/: package.json
crates/mcp-server/src/: index.js
deploy/agentcore/: env.example  library-patch.json
deploy/docker/: Dockerfile  docker-compose.yml
module/: Cargo.toml
module/src/: lib.rs
