[package]
name = "hmdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hmdb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
