[package]
name = "hiveminddb"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "hiveminddb"

[[bin]]
name = "hiveminddb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["connect", "handshake"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
